# django-async-include

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  publish_on_pypi.yml
async_include/: checksum.py  crypto.py  urls.py  views.py
async_include/templates/async_include/: spinner.html  template_tag.html  template_tag.js  template_tag_legacy.js
async_include/templatetags/: async_include.py  async_included.py
async_include/tests/: settings.py  test_async_include_render.py  test_templatetags.py  test_views.py  urls.py  wsgi.py
async_include/tests/resources/: test.db
async_include/tests/templates/: test_async_include.html  test_render_async_include_template.html  test_render_async_include_template_rendered.html
